fix: high contrast focus

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -182,6 +182,10 @@
     box-shadow: inset 0 0 0 2px $focus;
   }
 
+  .#{$prefix}--tag--high-contrast .#{$prefix}--tag__close-icon:focus {
+    box-shadow: inset 0 0 0 2px $inverse-focus-ui;
+  }
+
   .#{$prefix}--tag--filter.#{$prefix}--tag--disabled
     .#{$prefix}--tag__close-icon:hover {
     background-color: transparent;
